feat: add analytics app

--- a/nx.json
+++ b/nx.json
@@ -13,6 +13,15 @@
     },
     "api": {
       "tags": []
+    },
+    "ui": {
+      "tags": []
+    },
+    "analytics-e2e": {
+      "tags": []
+    },
+    "analytics": {
+      "tags": []
     }
   }
 }
