--- a/package.json
+++ b/package.json
@@ -27,14 +27,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "^8.6.0",
-    "base-64": "^0.1.0",
-    "body-parser": "^1.19.0",
-    "bson": "^4.0.2",
-    "express": "^4.17.1",
-    "moment": "^2.24.0",
-    "mongodb": "^3.3.2",
-    "passport": "^0.4.0",
     "@angular/animations": "^8.2.0",
     "@angular/common": "^8.2.0",
     "@angular/compiler": "^8.2.0",
@@ -43,11 +35,27 @@
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
+    "@mdi/font": "^4.5.95",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@nrwl/angular": "^8.6.0",
+    "base-64": "^0.1.0",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
+    "bson": "^4.0.2",
     "core-js": "^2.5.4",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "mongodb": "^3.3.2",
+    "passport": "^0.4.0",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.803.3",
+    "@angular/cli": "^8.3.8",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/language-service": "^8.2.0",
+    "@nrwl/cypress": "8.6.0",
     "@nrwl/eslint-plugin-nx": "8.5.1",
     "@nrwl/jest": "8.5.1",
     "@nrwl/node": "^8.5.1",
@@ -57,21 +65,17 @@
     "@types/node": "^8.9.5",
     "@typescript-eslint/eslint-plugin": "2.0.0-alpha.4",
     "@typescript-eslint/parser": "2.0.0-alpha.4",
+    "codelyzer": "~5.0.1",
+    "cypress": "3.4.1",
     "dotenv": "6.2.0",
     "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
     "prettier": "1.18.2",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5",
-    "jest-preset-angular": "7.0.0",
-    "@angular/compiler-cli": "^8.2.0",
-    "@angular/language-service": "^8.2.0",
-    "@angular-devkit/build-angular": "^0.803.3",
-    "codelyzer": "~5.0.1",
-    "cypress": "3.4.1",
-    "@nrwl/cypress": "8.6.0"
+    "typescript": "~3.4.5"
   }
 }
