--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/router": "^8.2.0",
     "@mdi/font": "^4.5.95",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@ng-select/ng-select": "^3.4.0",
     "@nrwl/angular": "^8.6.0",
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
@@ -46,6 +47,7 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
+    "ngx-daterangepicker-material": "^2.1.8",
     "passport": "^0.4.0",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
