--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "^8.2.0",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.0",
@@ -46,6 +47,7 @@
     "bootstrap": "^4.3.1",
     "bson": "^4.0.2",
     "core-js": "^2.5.4",
+    "d3-hierarchy": "^1.1.8",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
@@ -64,6 +66,7 @@
     "@nrwl/jest": "8.5.1",
     "@nrwl/node": "^8.5.1",
     "@nrwl/workspace": "8.5.1",
+    "@types/d3": "^5.7.2",
     "@types/jest": "24.0.9",
     "@types/mongodb": "^3.3.3",
     "@types/node": "^8.9.5",
@@ -71,6 +74,7 @@
     "@typescript-eslint/parser": "2.0.0-alpha.4",
     "codelyzer": "~5.0.1",
     "cypress": "3.4.1",
+    "d3": "^5.12.0",
     "dotenv": "6.2.0",
     "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
