--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
+    "database": "nx build database-builder && SNOMED_DB='mongodb://localhost:27018/es-edition' ANDES_DB='mongodb://localhost:27018/andes' node dist/apps/database-builder/main.js",
     "api": "PORT=3001 MONGO_DB_CONN='mongodb://localhost:27018/es-edition' ANDES_DB_CONN='mongodb://localhost:27018/andes' npm run start api"
   },
   "private": true,
