--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "dep-graph": "nx dep-graph",
     "help": "nx help",
     "database": "nx build database-builder && SNOMED_DB='mongodb://localhost:27018/es-edition' ANDES_DB='mongodb://localhost:27018/andes' node dist/apps/database-builder/main.js",
-    "api": "PORT=3001 MONGO_DB_CONN='mongodb://localhost:27018/es-edition' ANDES_DB_CONN='mongodb://localhost:27018/andes' npm run start api"
+    "api": "PORT=3001 MONGO_DB_CONN='mongodb://localhost:27018/es-edition' ANDES_DB_CONN='mongodb://localhost:27018/andes' npm run start api",
+    "app": "npx nx run analytics",
+    "build:prod": "npx nx build analytics --configuration=production"
   },
   "private": true,
   "dependencies": {
