--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
+    "@google/maps": "^1.0.2",
     "@mdi/font": "^4.5.95",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ng-select/ng-select": "^3.4.0",
