--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "database": "nx build database-builder && SNOMED_DB='mongodb://localhost:27018/es-edition' ANDES_DB='mongodb://localhost:27018/andes' node dist/apps/database-builder/main.js",
-    "api": "PORT=3001 MONGO_DB_CONN='mongodb://localhost:27018/es-edition' ANDES_DB_CONN='mongodb://localhost:27018/andes' npm run start api",
+    "database": "nx build database-builder && node dist/apps/database-builder/main.js",
+    "api": " npm run start api",
     "app": "npx nx run analytics",
     "build:prod": "npx nx build analytics --configuration=production"
   },
@@ -79,7 +79,7 @@
     "codelyzer": "~5.0.1",
     "cypress": "3.4.1",
     "d3": "^5.12.0",
-    "dotenv": "6.2.0",
+    "dotenv": "^6.2.0",
     "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "24.1.0",
