--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0",
+    "@andes/api-tool": "^1.3.0",
     "@angular/animations": "^8.2.0",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.0",
@@ -57,6 +58,8 @@
     "mongodb": "^3.3.2",
     "ngx-daterangepicker-material": "^2.1.8",
     "passport": "^0.4.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
