--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
     "rxjs": "~6.4.0",
+    "shiro-trie": "^0.4.9",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
@@ -74,6 +75,7 @@
     "@nrwl/node": "^8.5.1",
     "@nrwl/workspace": "8.5.1",
     "@types/d3": "^5.7.2",
+    "@types/express": "^4.17.2",
     "@types/jest": "24.0.9",
     "@types/mongodb": "^3.3.3",
     "@types/node": "^8.9.5",
