--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
+    "@elastic/elasticsearch": "^6.8.6",
     "@google/maps": "^1.0.2",
     "@mdi/font": "^4.5.95",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
