--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ng-select/ng-select": "^3.4.0",
     "@nrwl/angular": "^8.6.0",
+    "angular-plotly.js": "^3.0.0",
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -56,10 +57,12 @@
     "d3-hierarchy": "^1.1.8",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
+    "force-graph": "^1.33.0",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "ngx-daterangepicker-material": "^2.1.8",
     "passport": "^0.4.0",
+    "plotly.js": "^1.55.1",
     "plotly.js-dist": "^1.55.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
