--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@agm/core": "^1.0.0",
     "@andes/api-tool": "^1.3.0",
+    "@andes/icons": "^1.1.3",
     "@angular/animations": "^8.2.0",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.0",
