--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "force-graph": "^1.33.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "ngx-daterangepicker-material": "^2.1.8",
